--- a/index.html
+++ b/index.html
@@ -759,17 +759,16 @@
         </div>
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-item"><a href="https://betebetr.com/category/kac-oldu" class="openAcca">betebet KAÇ OLDU</a>
+                <li class="nav-item"><a href="https://betebetgiris.vercel.app/" class="openAcca">betebet GİRİŞ</a></li>
+                <li class="nav-item"><a href="https://betebetsorunsuzgiris.vercel.app/" class="openAcca">betebet SORUNSUZ GİRİŞ</a></li>
+                <li class="nav-item"><a href="https://betebetyeniadresi.vercel.app/" class="openAcca">betebet YENİ ADRESİ</a> </li>
+                <li class="nav-item"><a href="https://betebetadresikacoldu.vercel.app/" class="openAcca">betebet ADRESİ KAÇ OLDU</a></li>
+                <li class="nav-item"><a href="https://betebetgirisyapamiyorum.vercel.app/" class="openAcca">betebet GİRİŞ YAPAMIYORUM</a></li>
+                <li class="nav-item"><a href="https://betebetbahis.vercel.app/" class="openAcca">betebet BAHİS</a></li>
+                <li class="nav-item">
+                    <a href="https://betebetbonus.vercel.app/"
+                       class="openAcca">betebet BONUS</a>
                 </li>
-                <li class="nav-item"><a href="https://betebetr.com/category/giris"
-                                        class="openAcca">betebet SORUNSUZ GİRİŞ</a></li>
-                <li class="nav-item"><a href="https://betebetr.com/category/yeni-giris" class="openAcca">betebet YENİ ADRESİ</a>
-                </li>
-        
-           
-                <li class="nav-item"><a href="https://betebetr.com/category/canli-bahis" class="openAcca">betebet BAHİS</a></li>
-                <li class="nav-item"><a href="https://betebetr.com/category/mobil-giris"
-                                        class="openAcca">betebet MOBİL GİRİŞ</a></li>
             </ul>
         </nav>
         <div class="buttons">
